15-OCI-Cluster-Kubernetes/01-Merhaba-Dunya/02-Merhaba-service.yml
apiVersion: v1
kind: Service
metadata:
  name: merhaba-servisi
  labels:
    app: merhaba-dunya
spec:
  type: NodePort
  selector:
    app: merhaba-dunya
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
