15-OCI-Cluster-Kubernetes/01-Merhaba-Dunya/04-Merhaba-stack-ingress.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: merhaba-uygulama
spec:
  selector:
    matchLabels:
      app: merhaba
  replicas: 2
  template:
    metadata:
      labels:
        app: merhaba
    spec:
      containers:
      - name: merhaba-konteyneri
        image: myoung34/armhf-hello-kubernetes:latest
---
apiVersion: v1
kind: Service
metadata:
  name: merhaba-servisi
  labels:
    app: merhaba
spec:
  type: NodePort
  selector:
    app: merhaba
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-merhaba-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: merhaba.techakademi.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: merhaba-servisi
            port:
              number: 80
